--- a/assets/css/style1.css
+++ b/assets/css/style1.css
@@ -2,10 +2,14 @@
 
 /* 
     Add a CSS ruleset to accomplish the following:
-    - Use the 'Lato' font family at 18px throughout the body of the document
+    - Use the 'lato' font family at 18px throughout the body of the document
     - cover the of the document background with the "map-bg.jpg" image in the images directory. 
 */
-
+body {
+    font-family: Lato;
+    font-size: 18px;
+    background-image: url(../images/map-bg.jpg);
+}
 
 nav {font-family: sans-serif;font-size: 10px;}
 #main {width: 900px; margin: 10px auto;}
@@ -16,13 +20,18 @@ nav {font-family: sans-serif;font-size: 10px;}
         - set the font size to 45px 
         - set the font color to #5d4037
 */
-
+head {
+    font-family: Supermercado one;
+    font-size: 45px;
+    color: #5d4037;
+}
 
 /* 
     Update the following ruleset (#menu) to accomplish the following:
         - Set the separator between the columns (the "column-rule") to be 2px dashed rosybrown. 
 */
 #menu {
+    column-rule: 2px dashed rosybrown;
     columns: 400px 2;
     column-gap: 100px;
 }
@@ -35,14 +44,20 @@ h2 {margin: 0;}
         - Show each of the section headings of the menu  in small caps
         - set the font color to #6d4c41
 */
-
+ h2 {
+    font-variant: small-caps;
+    color: #6d4c41;
+}
 
 /* 
     Add a CSS ruleset targeting the name of each menu item to accomplish the following:
         - Set the font size to 20px
         - Make the font bold
 */
-
+dl dt{
+    font-size: 20px;
+    font-weight: bold;
+}
 
 dd {margin: 0 0 12px 0; display: flex;}
 .details {order: 1;}
@@ -55,6 +70,8 @@ dd {margin: 0 0 12px 0; display: flex;}
 .price {
     order: 2;
     padding-left: 10px;
+    font-size: large;
+    color: firebrick;
 }
 
 address {padding: 10px;}
@@ -63,3 +80,6 @@ address {padding: 10px;}
     Add a CSS ruleset targeting the footer to accomplish the following:
         - Draw a 2px dashed rosybrown border
 */
+footer {
+    border: 2px dashed rosybrown;
+}
