--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -6,6 +6,7 @@
 */
 body {
     font-family: Oswald;
+    font-size: 14px;
 }
 
 nav {font-family: sans-serif; font-size: 10px;}
@@ -17,8 +18,8 @@ nav {font-family: sans-serif; font-size: 10px;}
         - set the font size to 46px 
         - use a lighter weight font
 */
-head {
-    font-family: Bungee Inline;
+h1 {
+    font-family: "Bungee Inline";
     font-size: 46px;
     font-weight: lighter;
 }
