--- a/assets/css/style1.css
+++ b/assets/css/style1.css
@@ -9,6 +9,7 @@ body {
     font-family: "Lato";
     font-size: 18px;
     background-image: url(../images/map-bg.jpg);
+    background-size: cover;
 }
 
 nav {font-family: sans-serif;font-size: 10px;}
